# MyDevice

01_bin/: ReadMe.txt
03_model/: eaton.mdl
04_code/: DataReceiver.cpp  DataReceiver.h  main.cpp
06_docs/: Document.docx
09_prj/CMakeProjectEaton/: CMakeLists.txt  CMakeSettings.json
