# CMakeList.txt : CMake project for CMakeProjectEaton, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

project ("CMakeProjectEaton")

# Add source to this project's executable.
add_executable (CMakeProjectEaton "CMakeProjectEaton.cpp" "CMakeProjectEaton.h" )

# TODO: Add tests and install targets if needed.
